# anemone

./: .envrc  .envrc.local.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  LICENSE-APACHE  Makefile  README.md  TODO.md  build_all.sh  busybox  rootfsconfig  run_all_local.sh  rust-toolchain.toml  rustfmt.toml  setup_mirror.sh  signal-explanation.md  taplo.toml  tmp.S
anemone-kernel/: .gitignore  Cargo.toml  README.md
anemone-kernel/crates/buddy-system/: Cargo.toml  README.md  READNE.md
anemone-kernel/crates/buddy-system/fuzz/: Cargo.toml
anemone-kernel/crates/buddy-system/src/: adapter.rs  aligned.rs  bitmap.rs  error.rs  lib.rs  macros.rs  stats.rs  system.rs  zone.rs
anemone-kernel/crates/device-tree/: Cargo.toml  README.md
anemone-kernel/crates/device-tree/src/: lib.rs  parser.rs  unflattened.rs
anemone-kernel/crates/device-tree/testfiles/: qemu-virt-rv64.dtb  qemu-virt-rv64.dts
anemone-kernel/crates/idalloc/: Cargo.toml  README.md
anemone-kernel/crates/idalloc/src/: bitmap.rs  lib.rs  oneshot.rs  stack.rs
anemone-kernel/crates/kernel-macros/: Cargo.toml  README.md
anemone-kernel/crates/kernel-macros/src/: any_opaque.rs  dd.rs  initcall.rs  kunit.rs  lib.rs  percpu.rs  prv_data.rs  syscall.rs
anemone-kernel/crates/la-insc/: Cargo.toml  README.md
anemone-kernel/crates/la-insc/src/: lib.rs
anemone-kernel/crates/lwext4-rust/: ANEMONE.md  Cargo.toml  build.rs
anemone-kernel/crates/lwext4-rust/src/: blockdev.rs  fs.rs  ulibc.rs
anemone-kernel/crates/range-allocator/: Cargo.toml  README.md
anemone-kernel/crates/range-allocator/src/: increasing.rs  lib.rs
anemone-kernel/libkernel/: Cargo.toml  README.md
anemone-kernel/libkernel/src/: lib.rs
anemone-kernel/libkernel/src/debug/: mod.rs
anemone-kernel/libkernel/src/device/: mod.rs
anemone-kernel/libkernel/src/exception/: mod.rs  page_fault.rs
anemone-kernel/libkernel/src/mm/: addr.rs  layout.rs  mod.rs
anemone-kernel/libkernel/src/utils/: align.rs  macros.rs  mod.rs
anemone-kernel/src/: boot.rs  generated.dtb  initcall.rs  main.rs  panic.rs  percpu.rs  power.rs  prelude.rs  syserror.rs
anemone-kernel/src/arch/: link_symbols.rs  mod.rs
anemone-kernel/src/arch/loongarch64/: backtrace.rs  bootstrap.rs  cpu.rs  fpu.rs  generated.dtb  mod.rs  sched.rs  time.rs  utils.rs
anemone-kernel/src/arch/riscv64/: backtrace.rs  bootstrap.rs  cpu.rs  fpu.rs  mod.rs  power.rs  sched.rs  time.rs  trampoline.rs  utils.rs
anemone-kernel/src/debug/: backtrace.rs  kunit.rs  mod.rs
anemone-kernel/src/debug/api/: dbg_print.rs  mod.rs  sysinfo.rs  syslog.rs
anemone-kernel/src/debug/kunit/: mod.rs
anemone-kernel/src/debug/printk/: console.rs  log.rs  mod.rs
anemone-kernel/src/device/: boot_io.rs  console.rs  cpu.rs  devnum.rs  error.rs  idalloc.rs  kobject.rs  mod.rs  resource.rs
anemone-kernel/src/device/block/: devfs.rs  loop.rs  mod.rs  ramdisk.rs
anemone-kernel/src/device/bus/: mod.rs
anemone-kernel/src/device/char/: devfs.rs  full.rs  mod.rs  null.rs  urandom.rs  zero.rs
anemone-kernel/src/device/console/: simple_stdin.rs
anemone-kernel/src/device/discovery/: fwnode.rs  mod.rs  open_firmware.rs
anemone-kernel/src/device/mmc/: bus.rs  card.rs  host.rs  mod.rs  registry.rs
anemone-kernel/src/device/net/: loopback.rs  mod.rs
anemone-kernel/src/device/serial/: mod.rs
anemone-kernel/src/device/tty/: discipline.rs  endpoint.rs  file.rs  mod.rs  port.rs  relation.rs  terminal.rs
anemone-kernel/src/driver/: mod.rs
anemone-kernel/src/driver/ahci/: ata.rs  dma.rs  fis.rs  mod.rs  platform.rs  port.rs  regs.rs
anemone-kernel/src/driver/block/: mod.rs  virtio_blk.rs
anemone-kernel/src/driver/clock_source/: goldfish.rs  mod.rs
anemone-kernel/src/driver/intc/: loongson_2k1000.rs  loongson_platic.rs  mod.rs  plic.rs  riscv_intc.rs  sifive_plic.rs
anemone-kernel/src/driver/mmc/: consts.rs  mod.rs  sd_memory.rs
anemone-kernel/src/driver/net/: mod.rs  virtio_net.rs
anemone-kernel/src/driver/pci/: ecam.rs  mod.rs
anemone-kernel/src/driver/pcie/: ecam.rs  mod.rs
anemone-kernel/src/driver/rtc/: mod.rs  (+1 more)
anemone-kernel/src/exception/: hal.rs  ipi.rs  mod.rs  page_fault.rs  preempt_counter.rs  timer.rs
anemone-kernel/src/fs/: README.md  anonymous.rs  cache_stats.rs  dentry.rs  error.rs  eventfd.rs  file.rs  filesystem.rs  inode.rs  inode_shrinker.rs  iomux.rs  mod.rs  mount.rs  namei.rs  path.rs  permission.rs  pipe.rs  superblock.rs  timerfd.rs  uio.rs
anemone-kernel/src/mm/: addr.rs  dma.rs  error.rs  kpgdir.rs  kptable.rs  layout.rs  mod.rs  oom.rs  percpu.rs  remap.rs  stack.rs  zone.rs
anemone-kernel/src/net/: config.rs  error.rs  icmp_kunit.rs  mod.rs  poll.rs  sockfs.rs  syscall.rs  user_socket.rs  user_socket_kunit.rs
anemone-kernel/src/sched/: config.rs  event.rs  flags.rs  hal.rs  id.rs  idle.rs  latch.rs  mod.rs  nice.rs  oneshot.rs  proc.rs  processor.rs  request.rs  rr.rs  scheduler.rs  switch.rs  task.rs  wait.rs
anemone-kernel/src/sync/: counter.rs  final.rs  intrlock.rs  mod.rs  mono.rs  mutex.rs  rwlock.rs  spinlock.rs
anemone-kernel/src/syscall/: dt.rs  handler.rs  mod.rs  user_access.rs
anemone-kernel/src/task/: cpu_usage.rs  files.rs  fs.rs  itimer.rs  mod.rs  sched.rs  task.rs  tid.rs  topology.rs  wait.rs
anemone-kernel/src/time/: hal.rs  instant.rs  mod.rs  timekeeper.rs  timer.rs
anemone-kernel/src/utils/: align.rs  any_opaque.rs  as_container.rs  bitmap.rs  byte_writer.rs  cacheline.rs  circular_log.rs  data.rs  either.rs  identity.rs  int_like.rs  iter_ctx.rs  macros.rs  mmio.rs  mod.rs  prv_data.rs  ring_buffer.rs  writer.rs
anemone-kernel/src/uts/: mod.rs
anemone-rs/: Cargo.toml  README.md
anemone-rs/macros/: Cargo.toml
anemone-rs/macros/src/: entry.rs  lib.rs  signal.rs
anemone-rs/src/: allocator.rs  console.rs  env.rs  fs.rs  io.rs  lib.rs  prelude.rs  process.rs  runtime.rs  syscalls.rs
anemone-rs/src/os/: anemone.rs  linux.rs  mod.rs
anemone-rs/src/sys/: anemone.rs  linux.rs  mod.rs
scripts/xtask/: Cargo.toml  README.md
scripts/xtask/src/: main.rs  workspace.rs
(+1126 files in other folders)
