#! Kernel workspace. anemone-apps & anemone-rs & anemone-rs excluded.

[workspace]
resolver = "2"
members = ["anemone-kernel", "anemone-kernel/crates/*"]
exclude = ["scripts/xtask", "anemone-apps", "anemone-rs", "anemone-abi"]

[workspace.dependencies]
sbi-rt = { version = "0.0.3" }
loongArch64 = { version = "0.2.5" }
yansi = { version = "1.0.1", default-features = false }
riscv = { version = "0.16.0" }
bitflags = { version = "2.10.0" }
fdt = { version = "0.2.0-alpha1", features = ["pretty-printing"] }
spin = { version = "0.10.0", default-features = false, features = [
    "lazy",
    "use_ticket_mutex",
    "rwlock",
] }
talc = { version = "4.4.3" }
paste = { version = "1.0.15" }
# crossbeam-queue = { version = "0.3.12", default-features = false, features = [
#     "alloc",
#     "nightly",
# ] }
boxcar = { version = "0.2.14" }
rangemap = { version = "1.7.1" }
intrusive-collections = { version = "0.10", default-features = false, features = [
    "nightly",
] }
heapless = { version = "0.9.2" }
hashbrown = { version = "0.16.1" }
bimap = { version = "0.6.3", default-features = false }
fast_radix_trie = { version = "1.1", default-features = false, features = [
    "realloc",
] }
safe-mmio = { version = "0.3.0" }
virtio-drivers = { version = "0.13.0", default-features = false, features = [
    "alloc",
] }
typed-path = { version = "0.12.3", default-features = false }
lwext4_rust = { git = "https://github.com/anemone-os/lwext4_rust.git", rev = "ef99757", default-features = false, features = [
    "print",
] }
goblin = { version = "0.10.5", default-features = false, features = [
    # See https://github.com/m4b/goblin/blob/master/src/elf/mod.rs for why elf32 and endian_fd are needed.
    # "elf32",
    "elf64",
    # "endian_fd",
    # "alloc",
] }
wavltree = { version = "0.0.8" }

syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
