[package]
name = "anemone-kernel"
version = "0.1.0"
edition = "2024"

[features]
kunit = []

[dependencies]
anemone-abi = { path = "../anemone-abi" }
bitflags = { workspace = true }
fdt = { workspace = true }
spin = { workspace = true }
talc = { workspace = true }
paste = { workspace = true }
yansi = { workspace = true }
boxcar = { workspace = true }
rangemap = { workspace = true }
intrusive-collections = { workspace = true }
heapless = { workspace = true }
hashbrown = { workspace = true }
bimap = { workspace = true }
fast_radix_trie = { workspace = true }
buddy-system = { path = "crates/buddy-system", features = ["stats"] }
device-tree = { path = "crates/device-tree", features = ["alloc"] }
idalloc = { path = "crates/idalloc" }
range-allocator = { path = "crates/range-allocator" }
kernel-macros = { path = "crates/kernel-macros" }


[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { workspace = true }
sbi-rt = { workspace = true }
